# ModelViewer

./: .gitignore  AssImpMesh.cpp  AssImpMesh.h  AssImpMeshExporter.cpp  AssImpMeshExporter.h  AssImpModelLoader.cpp  AssImpModelLoader.h  BRepToAssimpConverter.cpp  BRepToAssimpConverter.h  BackgroundColor.cpp  BackgroundColor.ui  BoundingBox.cpp  BoundingBox.h  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ClippingPlanesEditor.ui  ConsoleProgressIndicator.cxx  ConsoleProgressIndicator.hxx  Cube.cpp  GLCamera.cpp  GLCamera.h  GLMaterial.cpp  GLMaterial.h  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MaterialProcessor.cpp  MaterialProcessor.h  MeshAnalyzer.cpp  MeshAnalyzer.h  MeshChartSegmenter.h  ModelObjectList.cpp  ModelViewer.cpp  ModelViewer.desktop  (+33 more)
.github/: pull_request.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  questions.md
.github/workflows/: build.yml
data/catalogs/: materials.json  materials.json.backup
data/tutorials/: README.md  common-styles.css  index.html  lesson01.html  lesson02.html  lesson03.html  lesson04.html  lesson05.html  lesson06.html  lesson07.html  lesson08.html  lesson09.html  lesson10.html  lesson11.html  lesson12.html  lesson13.html  lesson14.html  lesson15.html  lesson16.html  lesson17.html  lesson18.html
docs/: Exploded-View-Implementation.md  IBL_Diagonal_Seam_Fix.md  IBL_Fullscreen_Triangle_Migration.md  ModelViewer_Undo_Redo_System_Documentation.md  feature_edge_wireframe.md  fit_to_screen_algorithm.md  gltf_animation_feature_plan.md  glwidget-method-map.md  index.html  index.md  mesh-render-runtime-separation.md  mvf_format_spec.md  srp-refactor-phase2.md  threaded_model_loading_migration.md  turntable_reflections_doc.md
docs/exploded-views/: exploded-views-Implementation.md  exploded_views_persistence.md
include/: ADSMaterialSettingsPanel.h  AdaptiveShadowMapper.h  AnimationRuntimeController.h  AnimationUtils.h  AnimationsPanel.h  ApplyADSColorsCommand.h  ApplyADSTexturesCommand.h  ApplyMaterialCommand.h  ApplyPBRTexturesCommand.h  ApplyTexturesCommand.h  AssImpMesh.h  AssImpMeshBuilder.h  AssImpMeshExporter.h  AssImpModelLoader.h  AssemblyRelationGraph.h  BRepToAssimpConverter.h  BackgroundColor.h  BoundingBox.h  Camera.h  CamerasPanel.h  CapturedStepsTreeWidget.h  ChannelPackingEditorDialog.h  ClippingPlanesEditor.h  Cone.h  ConeRenderable.h  CoordinateSystemHelper.h  Cube.h  CubeRenderable.h  CutCommand.h  DeformableGeometry.h  DeformableMesh.h  DeleteMeshCommand.h  Drawable.h  DuplicateCommand.h  ExplodedViewManager.h  ExplodedViewPanel.h  ExplodedViewRuntimeController.h  ExplodedViewSelectionEditor.h  FloatingPanelDialog.h  FloorPlane.h  (+110 more)
packaging/windows/: mvinstaller.iss
res/: materials.json
scripts/: generate_texture_material_jsons.ps1
shaders/: background.frag  brdf.frag  charlie_lut.frag  clipped_mesh.vert  clipping_plane.frag  clipping_plane.vert  debug_quad_depth.frag  downsample_cubemap.frag  downsample_cubemap.vert  equirect_to_cube.frag  equirect_to_cube.vert  equirect_to_cube_quad.frag  equirect_to_cube_quad.vert  face_normal.geom  face_normal.vert  grid.frag  grid.vert  irradiance_convolution.frag  light_cube.frag  light_cube.vert  main_scene.frag  main_scene.geom  main_scene.vert  main_scene_flat.geom  main_scene_flat.vert  prefilter.frag  prefilter_charlie.frag  preview_swatch.frag  preview_swatch.vert  selection.vert  shadow_mapping_depth.vert  skybox.frag  skybox.vert  twoside_per_fragment.frag  vertex_normal.geom  viewcube.frag  viewcube.vert  viewcube_label.frag  viewcube_label.vert  wireframe.frag  (+1 more)
src/: ADSMaterialSettingsPanel.cpp  AdaptiveShadowMapper.cpp  AnimationRuntimeController.cpp  AnimationUtils.cpp  AnimationsPanel.cpp  ApplyADSColorsCommand.cpp  ApplyADSTexturesCommand.cpp  ApplyMaterialCommand.cpp  ApplyPBRTexturesCommand.cpp  ApplyTexturesCommand.cpp  AssImpMesh.cpp  AssImpMeshBuilder.cpp  AssImpMeshExporter.cpp  AssImpModelLoader.cpp  AssemblyRelationGraph.cpp  BRepToAssimpConverter.cpp  BackgroundColor.cpp  BoundingBox.cpp  BoundingSphere.cpp  Camera.cpp  CamerasPanel.cpp  CapturedStepsTreeWidget.cpp  ChannelPackingEditorDialog.cpp  ClippingPlanesEditor.cpp  Cone.cpp  ConeRenderable.cpp  CoordinateSystemHelper.cpp  Cube.cpp  CubeRenderable.cpp  CutCommand.cpp  DeleteMeshCommand.cpp  Drawable.cpp  DuplicateCommand.cpp  ExplodedViewManager.cpp  ExplodedViewPanel.cpp  ExplodedViewRuntimeController.cpp  ExplodedViewSelectionEditor.cpp  FloatingPanelDialog.cpp  FloorPlane.cpp  GLCamera.cpp  (+89 more)
test-models/: AGI-AGMS_1_1_linear _actuator-DEFAULT.IGS  ANC101.brep  ANC101.step  CAD Model v0.step  CAD.brep  CAD.step  ClosedCone.wrl  Cube.mtl  Cube.wrl  Cylinder.mtl  Hemisphere.mtl  Hemisphere.wrl  MBB Gehause Rohteil.brep  MBB Gehause Rohteil.step  ModelLicenses.txt  OCC-Logo.brep  OCC-Logo.step  OpenCone.wrl  OpenCylinder.wrl  Sphere.wrl  SphereJoined.wrl  SplitSphere.wrl  bottle.brep  bottle.step  cutter.brep  cutter.step  drill.brep  drill.step  sphereNX.stp
test-models/Cube/: Cube.mtl
test-models/Forklift/: Forklift2.mtl
test-models/Futuristic Transport Shuttle/: Transport Shuttle_obj.mtl
test-models/Skate-Board-Assy/: Skate-Board-Assy.glb  Skate-Board-Assy.igs  Skate-Board-Assy.mtl  (+1 more)
themes/: DarkOrange.qss  DarkSolarized.qss  Dracula.qss  GruvboxFusion.qss  Manjaroness.qss  MaterialDark.qss  Monokai.qss  NordFusion.qss  OneDark.qss  SolarizedLight.qss  TokyoNightFusion.qss
tools/: HDRGen.blend  MaterialPBRGen.html  ViewCube.par
translations/: README.md  complete_translations.py  modelviewer_de.ts  modelviewer_en.ts  modelviewer_es.ts  modelviewer_fr.ts  modelviewer_it.ts
ui/: ADSMaterialSettingsPanel.ui  ClippingPlanesEditor.ui  ExplodedViewPanel.ui  ExplodedViewSelectionEditor.ui  LogViewer.ui  MainWindow.ui  MaterialEditorPanel.ui  MaterialPropertiesPanel.ui  ModelViewer.ui  ObjectTransformPanel.ui  SettingsDialog.ui  TextureMappingPanel.ui  TextureParametersDialog.ui  TextureTransformsDialog.ui  UVGenerationDialog.ui  VisualizationEnvironmentPanel.ui
(+141 files in other folders)
